--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
      <h1>SRILAKSHMI</h1>
-     <img src="image.jpg"alt="image">
+     <img src="image.jpg"alt="image"width="200"height="200">
      <h2>Summary</h2>
      <p>I am a Compatinating,selfmotivating, loyal and individual and also hardworking person</p>
      <hr>
