--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <li>C(Basics)</li>
          <li>python</li>
          <li>java(basic knowledge)</li>
-         <li>html</li>
+         <li>web development</li>
        </ul>
        </hr>
        <hr>
