--- a/index.html
+++ b/index.html
@@ -25,14 +25,25 @@
        <hr>
        <h2>Acadamic project</h2>
        <h3>project title:</h3>
-       <p>seziure detection</p>
+       <h3>seziure detection for pregency women's by using AI with IOT technologies</h3>
+       <p>Eclampsia is seizures that occur in pregant people with preeclampsia symptoms of eclamsia are high blood pressure,headaches,blurry vision,difficult to breathing,swelling of hands,face or ankles and convolutions.</p>
+       <p>Eclampsia is a rare but serious condition that occurs in the second half of pregancy.</p>
+       <p>To prevent these we are using wearable devices it helps to detect seizures in pregency women.the devices include smartwatches,EEG recorders,and other sensors</p>p>
+       <h3>sensors using:</h3>
+        <ul>
+          <li>ESP 32</li>
+          <li>Accelerometer</li>
+          <li>Max 30102</li>
+        </ul>
+       <p></p>
        </hr>
        <hr>
-        <h2>Awards and certifications</h2>
+        <h2>Awards and certifications:</h2>
         <ul>
           <li>hackthon participation certificate</li>
           <li>paper presentation certificate</li>
           <li> certificate on idea of insite</li>
+          <li>certification on spidy(A webpage creation using HTML,CSS) </li>
         </ul>
        </hr>
        <hr>
