--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!doctype html>
 <html>
   <head>
-    <Title>resume</Title>
+    <Title>My resume</Title>
   </head>
   <body>
-     <h1>SRILAKSHMI</h1>
+     <h1>THOTA SRILAKSHMI</h1>
+    <p>Email: thotalakshmi2244@gmail.com | phone: +91 9182361572</p>
+    <p>Location: Macherla, Andhrapradesh</p>
      <img src="image.jpg"alt="image"width="200"height="200">
-     <h2>Summary</h2>
-     <p>I am a Compatinating,selfmotivating, loyal and individual and also hardworking person</p>
+    <hr>
+    
+     <h2>Career Objective</h2>
+     <p>To secure a challenging position in a reputed MNC and build a long-term Career in the software industry by using my skills and learning to grow both personally and professionally.</p>
      <hr>
        <h2>Education</h2>
-       <p>BACHELOR OF ENGINEERING AND TECHNOLOGY-(2022-2026)</p>
+       <ul>
+       <li><strong>B.tech in AIML</strong>Malineni Lakshmaiah Womens Engineering College, guntur       (2022-2026)</li>
+         <li><strong>Intermediate</strong>A.p model junior college, kandlakunta</li>
+         <li><strong>10th Class </strong>A.p model school, kandlakunta</li>
+       </ul>
      </hr>
      <hr>
        <h2>Technical Skills</h2>
        <p>Programing languages:</p>
        <ul>
-         <li>C(Basics)</li>
+         <li>C (Basic)</li>
          <li>python</li>
-         <li>java(basic knowledge)</li>
+         <li>sql</li>
          <li>web development</li>
        </ul>
        </hr>
@@ -42,15 +50,21 @@
         <ul>
           <li>hackthon participation certificate</li>
           <li>paper presentation certificate</li>
-          <li> certificate on idea of insite</li>
+          <li>GEN AI Certificate by GUVI</li>
           <li>certification on spidy(A webpage creation using HTML,CSS) </li>
         </ul>
        </hr>
        <hr>
-       <h2>other</h2>
+       <h2>Hobbies</h2>
        <ul>
-       <li><a href="#my hobbies. html">my hobbies</a></li>
-       <li><a href="#contact me.html">contact me</a></li>
+       <li>watching movies</li>
+       <li>Cooking for my family</li>
+       <li>Listening to music</li>
+       </ul>
+       <h2>Languages</h2>
+       <ul>
+         <li>Telugu</li>
+         <li>English</li>
        </ul>
        <footer>
          <p>&copy;SRILAKSHMI.All rights reserved</p>
